--- a/index.html
+++ b/index.html
@@ -74,33 +74,28 @@
                         width="360" height="300">
                     </li>
                 </ul>              
-                
             </section>
             <!-- Team Section -->
             <section>
                 <h2>Our Team</h2>
                 <ul>
                     <li>
-                        <img src="./img/Mark Guerrero.jpg" alt="Daniel Wilson"
+                        <img src="./img/Mark Guerrero.jpg" alt="Mark Guerrero"
                         width="264" height="260"> 
-                            <h3>Daniel Wilson</h3>
+                            <h3>Mark Guerrero</h3>
                                 <p>Product Designer</p>   
-                        </img>
                         <img src="./img/Tom Ford.jpg" alt="Tom Ford"
                         width="264" height="260">
                             <h3>Tom Ford</h3>
                                 <p>Frontend Developer</p>   
-                        </img>
                         <img src="./img/Camila Garcia.jpg" alt="Camila Garcia"
                         width="264" height="260">
                             <h3>Camila Garcia</h3>
                                 <p>Marketing</p>    
-                        </img>
                         <img src="./img/Daniel Wilson.jpg" alt="Daniel Wilson"
                         width="264" height="260">
                             <h3>Daniel Wilson</h3>
                                 <p>UI Designer</p>    
-                        </img>
                     </li>
                 </ul>    
             </section>
