--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
                 <h2>Our Team</h2>
                 <ul>
                     <li>
-                        <img src="./img/Mark Guerrero.jpg" alt="Mark Guerrero"
+                        <img src="./img/MarkGuerrero.jpg" alt="Mark Guerrero"
                         width="264" height="260"> 
                             <h3>Mark Guerrero</h3>
                                 <p>Product Designer</p>   
-                        <img src="./img/Tom Ford.jpg" alt="Tom Ford"
+                        <img src="./img/TomFord.jpg" alt="Tom Ford"
                         width="264" height="260">
                             <h3>Tom Ford</h3>
                                 <p>Frontend Developer</p>   
-                        <img src="./img/Camila Garcia.jpg" alt="Camila Garcia"
+                        <img src="./img/CamilaGarcia.jpg" alt="Camila Garcia"
                         width="264" height="260">
                             <h3>Camila Garcia</h3>
                                 <p>Marketing</p>    
-                        <img src="./img/Daniel Wilson.jpg" alt="Daniel Wilson"
+                        <img src="./img/DanielWilson.jpg" alt="Daniel Wilson"
                         width="264" height="260">
                             <h3>Daniel Wilson</h3>
                                 <p>UI Designer</p>    
